# vala-language-server

./: .gitignore  meson.build
src/: Application.vala  CompileJob.vala  ProjectManager.vala  Reporter.vala  Server.vala  Utils.vala  ValaFindNode.vala  ValaFormatter.vala  meson.build
src/ProjectAnalyzers/: AbstractProjectAnalyzer.vala  CMakeProjectAnalyzer.vala  MesonAnalyzer.vala  ValaProjectAnalyzer.vala
src/linter/: Application.vala
subprojects/: langserver-glib.wrap
